--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=um_db
-MIGRATE_DIRECTION=up
+# MIGRATE_DIRECTION can be "up" for direct migration or "down" to reverse migration
+MIGRATE_DIRECTION=down
+# MIGRATE_NUM make N up or down migrations
 MIGRATE_NUM=4
