--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=um_db
 # MIGRATE_DIRECTION can be "up" for direct migration or "down" to reverse migration
-MIGRATE_DIRECTION=down
+MIGRATE_DIRECTION=up
 # MIGRATE_NUM make N up or down migrations
-MIGRATE_NUM=4
+MIGRATE_NUM=1
+UM_PASSWORD='gateway'
