--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   db:
-    image: "postgres"
+    image: "postgres:9.6.17"
     restart: unless-stopped
     networks:
       - "gpsnet"
@@ -21,7 +21,7 @@ services:
       - ./migrations:/migrations
     env_file:
       - ".env"
-    command: ["-path", "./migrations", "-database",  "postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB?sslmode=disable", "$MIGRATE_DIRECTION", "$MIGRATE_NUM", "$UM_PASSWORD"]
+    command: ["-path", "./migrations", "-database",  "postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB?sslmode=disable", "up"]
     depends_on: 
       - db
       
