--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@
         - ".env"
       volumes:
         - ./db-data:/var/lib/postgresql/data
-        - ./init:/docker-entrypoint-initdb.d/
+        - ./migrator/init:/docker-entrypoint-initdb.d/
       ports:
         - 7777:5432
 
@@ -19,7 +19,7 @@
       networks:
         - "gpsnet"
       volumes: 
-        - ./migrations:/migrations
+        - ./migrator/migrations:/migrations
       environment:
           - UM_PASSWORD
       env_file:
