remove one consul agent

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,24 +77,27 @@ services:
     depends_on: 
       - db
      
-  consul-agent-1: &consul-agent
+  consul-agent: 
+    networks:
+      - gpsnet
+    build: ./infra/consul
+    command: "-retry-join consul-server-bootstrap -client 0.0.0.0"
+    depends_on:
+      - consul-server-bootstrap
+
+  consul-server-1: &consul-server
     image: consul:1.7.1
     networks:
       - gpsnet
-    build: ./infra/consul/consul_registr
-    command: "-retry-join consul-server-bootstrap -client 0.0.0.0"
-    depends_on:
-    - consul-server-bootstrap
-
-  consul-server-1: &consul-server
-    <<: *consul-agent
     command: "agent -server -retry-join consul-server-bootstrap -client 0.0.0.0"
 
   consul-server-2:
     <<: *consul-server
 
   consul-server-bootstrap:
-    <<: *consul-agent
+    image: consul:1.7.1
+    networks:
+      - gpsnet
     ports:
       - "8400:8400"
       - "8500:8500"
@@ -116,6 +119,7 @@ services:
       context: .
     depends_on:  
       - db
+      - migrator
       - graylog
-      - consul     
+           
      
