Change version of postgress in README.db

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@
 
     migrator:
       image: "migrate/migrate"
+      restart: on-failure:10
       networks:
         - "gpsnet"
       volumes: 
