--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,8 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=
 POSTGRES_DB=um_db
-UM_PASSWORD=
+
+UM_PASSWORD='' //password should be in single quotas
 
 #User-Manager environment variable
 SERVICE_NAME=usermanager
