add to README.md notation that .env should be without comments

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,17 @@
-#Postgres environment variable
-POSTGRES_USER=postgres
+#Postgres environment variables
+POSTGRES_USER=postgres 
 POSTGRES_PASSWORD=
-POSTGRES_DB=um_db
-
+POSTGRES_DB=um_db 
 UM_PASSWORD='' //password should be in single quotas
 
-#User-Manager environment variable
+#User-Manager environment variables
 SERVICE_NAME=usermanager
 BIND_IP=0.0.0.0
 BIND_PORT=8000
 BIND_DEBUG_PORT=8001
 CONSUL_ADDRESS=consul:8500
 
-#Gralog environment variable
+#Gralog environment variables
 GRAYLOG_PASSWORD_SECRET=
 GRAYLOG_ROOT_PASSWORD_SHA2=
 GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
