Fix remove *config.json from remote branch

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ db-data/
 # Configs
 *.config.json
 
+# Logs
+*.log
+
 # Output of the go coverage tool, specifically when used with LiteIDE
 .out
 
