Fix config json with remote repo

--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,20 @@
 # Settings for VS Code programs
 *.code-workspace
-
 # Volumes for local storage of database
 db-data/
-
 # Binaries for programs and plugins
 .exe
 .exe~
 .dll
 .so
 .dylib
-
 # Test binary, built with `go test -c`
 .test
-
-# Configs
-*.config.json
-
-# Logs
-*.log
-
 # Output of the go coverage tool, specifically when used with LiteIDE
 .out
-
 # Dependency directories (remove the comment below to include it)
 vendor
-
 # IDE
 .idea
+# environment var
+.env
