--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ db-data/
 .test
 # Configs
 *.config.json
+# Log files
+*.log
 # Output of the go coverage tool, specifically when used with LiteIDE
 .out
 # Dependency directories (remove the comment below to include it)
