--- a/.env.example
+++ b/.env.example
@@ -5,8 +5,8 @@ POSTGRES_DB=um_db
 UM_PASSWORD='' //password should be in single quotas
 #User-Manager environment variables
 SERVICE_NAME=usermanager
-BIND_IP=0.0.0.0
-BIND_PORT=8000
+HTTP_IP=0.0.0.0
+HTTP_PORT=8000
 BIND_DEBUG_PORT=8001
 CONSUL_ADDRESS=consul:8500
 #Gralog environment variables
