--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,17 @@
-version: '3'
+version: "3"
 
 networks:
   gpsnet:
     driver: bridge
 
-
 services:
-
   mongo:
     image: mongo:4.1
     networks:
       - gpsnet
-  
+
   elasticsearch:
-    image:  docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.2
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.8.2
     environment:
       - http.host=0.0.0.0
       - transport.host=localhost
@@ -25,11 +23,11 @@ services:
         hard: -1
     networks:
       - gpsnet
-  
+
   graylog:
-    image: graylog/graylog:3.2.3
     networks:
       - gpsnet
+    build: ./infra/graylog
     env_file:
       - .env
     links:
@@ -49,8 +47,13 @@ services:
       - 12201:12201
       # GELF UDP
       - 12201:12201/udp
-  
-     
+    restart: on-failure
+    healthcheck:
+      test: /bin/health-check-udp-input.sh
+      interval: 50s
+      timeout: 10s
+      retries: 10
+
   db:
     image: postgres:12.2
     restart: always
@@ -68,16 +71,23 @@ services:
     image: migrate/migrate
     networks:
       - gpsnet
-    volumes: 
+    volumes:
       - ./migrator/migrations:/migrations
-    
     env_file:
       - .env
-    command: ["-path", "./migrations", "-database",  "postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB?sslmode=disable", "up"]
-    depends_on: 
+    command:
+      [
+        "-path",
+        "./migrations",
+        "-database",
+        "postgres://$POSTGRES_USER:$POSTGRES_PASSWORD@db:5432/$POSTGRES_DB?sslmode=disable",
+        "up",
+      ]
+    depends_on:
       - db
-     
-  consul-agent: 
+    restart: on-failure
+
+  consul-agent:
     networks:
       - gpsnet
     build: ./infra/consul
@@ -96,15 +106,18 @@ services:
 
   consul-server-bootstrap:
     image: consul:1.7.1
+    hostname: consul
     networks:
-      - gpsnet
+      gpsnet:
+        aliases:
+          - consul
     ports:
       - "8400:8400"
       - "8500:8500"
       - "8600:8600"
       - "8600:8600/udp"
     command: "agent -server -bootstrap-expect 3 -ui -client 0.0.0.0"
-  
+
   usermanager:
     image: github.com/lvl484/user-manager
     networks:
@@ -117,9 +130,9 @@ services:
     build:
       dockerfile: Dockerfile
       context: .
-    depends_on:  
+    depends_on:
       - db
       - migrator
       - graylog
-           
-     
+      - consul-server-bootstrap
+    restart: on-failure
