--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,7 +60,7 @@ services:
       - .env
     volumes:
 # FATAL:  data directory "/var/lib/postgresql/data" has wrong ownership
-#      - ./db-data:/var/lib/postgresql/data
+      - ./db-data:/var/lib/postgresql/data
       - ./migrator/init:/docker-entrypoint-initdb.d/
     ports:
       - 5432:5432
