add new email config and mail tests

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,5 @@ CONSUL_ADDRESS=consul:8500
 GRAYLOG_PASSWORD_SECRET=
 GRAYLOG_ROOT_PASSWORD_SHA2=
 GRAYLOG_HTTP_EXTERNAL_URI=http://127.0.0.1:9000/
+#Email
+EMAIL_PASSWORD=lvlXXXGolang
